Updated web-interface to store and get private urls. Minor updates on the server side.

--- a/linkshorter-ui/src/main/webapp/css/main.css
+++ b/linkshorter-ui/src/main/webapp/css/main.css
@@ -79,7 +79,8 @@ body {
     max-width: 680px;
 }
 
-.form-signin input[type="text"] {
+.form-signin input[type="text"],
+.form-signin input[type="password"] {
     font-size: 16px;
     height: auto;
     margin-bottom: 15px;
@@ -116,6 +117,11 @@ body {
 } 
 .navbar-form {
     margin-right: 10%;
+}
+
+div.show-hide
+{
+    display: none;
 }
 
 
