Fix of bug with iframe in panel

--- a/src/main/extensions/firefox/shorter.firefoxextension/chrome/skin/skin.css
+++ b/src/main/extensions/firefox/shorter.firefoxextension/chrome/skin/skin.css
@@ -9,3 +9,7 @@ toolbar[iconsize="small"] #lcoua-toolbar-button {
 #lcoua-toolbar-button dropmarker {
     display: none;
 }
+
+input[type=text] {
+    font-size: 15px;
+}
